--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_many_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_many_keywords.1.html
@@ -389,9 +389,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>5.10
-                          <small>(beta)</small>
-                        </div>
+                        <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
@@ -410,9 +408,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>5.10
-                          <small>(beta)</small>
-                        </div>
+                        <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
