--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_no_authors_activity.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_no_authors_activity.1.html
@@ -178,9 +178,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>5.10
-                          <small>(beta)</small>
-                        </div>
+                        <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
@@ -199,9 +197,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>5.10
-                          <small>(beta)</small>
-                        </div>
+                        <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
