--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_other_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_other_license.1.html
@@ -186,9 +186,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>5.10
-                          <small>(beta)</small>
-                        </div>
+                        <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
@@ -207,9 +205,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>5.10
-                          <small>(beta)</small>
-                        </div>
+                        <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
                         <div>5.7</div>
