--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.ref-index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.ref-index.html
@@ -15,7 +15,7 @@
   <script defer src="/owner/package/feature-1.2.3/js/index.2871ffbd.js"></script> 
   <link href="/owner/package/feature-1.2.3/css/index.ff036a9e.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="/docc.css?test" />
-  <link rel="canonical" href="/owner/package/feature/1.2.3/documentation" />
+  <link rel="canonical" href="/owner/package/feature/1.2.3/documentation/target" />
  </head> 
  <body data-color-scheme="auto">
   <header class="spi">
@@ -29,7 +29,13 @@
       <li><a href="/"><span>Swift Package Index</span></a></li>
       <li><a href="/owner"><span>owner</span></a></li>
       <li><a href="/owner/package"><span>pkg</span></a></li>
-      <li><span>Documentation for <span class="branch">feature-1.2.3</span></span></li>
+      <li>
+       <div class="choices">
+        <span>Documentation for <span class="branch">feature-1.2.3</span></span>
+        <ul>
+         <li><a href="/owner/package/feature-1.2.3/documentation/target"><span class="branch">feature/1.2.3</span></a></li>
+        </ul>
+       </div></li>
      </ul>
     </nav>
    </div>
