--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.current-index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.current-index.html
@@ -32,7 +32,7 @@
        <div class="choices">
         <span>Documentation for <span class="branch">feature-1.2.3</span></span>
         <ul>
-         <li><a href="/owner/package/feature-1.2.3/documentation/docs"><span class="branch">feature/1.2.3</span></a></li>
+         <li><a href="/owner/package/feature-1.2.3/documentation/target"><span class="branch">feature/1.2.3</span></a></li>
         </ul>
        </div></li>
      </ul>
