Rename mock doc archive

--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b-mixed-case.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b-mixed-case.html
@@ -29,7 +29,14 @@
       <li><a href="/"><span>Swift Package Index</span></a></li>
       <li><a href="/Owner"><span>Owner</span></a></li>
       <li><a href="/Owner/Package"><span>pkg</span></a></li>
-      <li><span>Documentation for <span class="stable">1.2.3</span></span></li>
+      <li>
+       <div class="choices">
+        <span>Documentation for <span class="stable">1.2.3</span></span>
+        <ul>
+         <li class="current"><a href="/Owner/Package/1.2.3/documentation/target"><span class="branch">1.2.3</span></a></li>
+         <li class="current"><a href="/Owner/Package/1.2.3/documentation/target"><span class="branch">1.2.3</span></a></li>
+        </ul>
+       </div></li>
      </ul>
     </nav>
    </div>
