--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target.html
@@ -29,7 +29,14 @@
       <li><a href="/"><span>Swift Package Index</span></a></li>
       <li><a href="/owner"><span>owner</span></a></li>
       <li><a href="/owner/package"><span>pkg</span></a></li>
-      <li><span>Documentation for <span class="stable">1.2.3</span></span></li>
+      <li>
+       <div class="choices">
+        <span>Documentation for <span class="stable">1.2.3</span></span>
+        <ul>
+         <li class="current"><a href="/owner/package/1.2.3/documentation/target"><span class="branch">1.2.3</span></a></li>
+         <li class="current"><a href="/owner/package/1.2.3/documentation/target"><span class="branch">1.2.3</span></a></li>
+        </ul>
+       </div></li>
      </ul>
     </nav>
    </div>
