--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target.html
@@ -33,8 +33,8 @@
        <div class="choices">
         <span>Documentation for <span class="stable">1.2.3</span></span>
         <ul>
-         <li class="current"><a href="/owner/package/1.2.3/documentation/target"><span class="branch">1.2.3</span></a></li>
-         <li class="current"><a href="/owner/package/1.2.3/documentation/target"><span class="branch">1.2.3</span></a></li>
+         <li><a href="/owner/package/main/documentation/target"><span class="branch">main</span></a></li>
+         <li class="current"><a href="/owner/package/1.2.3/documentation/target"><span class="stable">1.2.3</span></a></li>
         </ul>
        </div></li>
      </ul>
