Update test expectations

--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_issue_2288.index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_issue_2288.index.html
@@ -8,9 +8,7 @@
   <link rel="icon" href="/foo/bar/~/favicon.ico" /> 
   <link rel="mask-icon" href="/foo/bar/~/favicon.svg" color="#333333" /> 
   <title>bar Documentation – Swift Package Index</title> 
-  <script>
-        var baseUrl = "/"
-    </script> 
+  <script>var baseUrl = "/foo/bar/~/"</script> 
   <script defer src="/foo/bar/~/js/chunk-vendors.bdb7cbba.js"></script> 
   <script defer src="/foo/bar/~/js/index.2871ffbd.js"></script> 
   <link href="/foo/bar/~/css/index.ff036a9e.css" rel="stylesheet" /> 
