--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_current.index-mixed-case.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_current.index-mixed-case.html
@@ -8,9 +8,7 @@
   <link rel="icon" href="/owner/package/~/favicon.ico" /> 
   <link rel="mask-icon" href="/owner/package/~/favicon.svg" color="#333333" /> 
   <title>pkg Documentation – Swift Package Index</title> 
-  <script>
-        var baseUrl = "/"
-    </script> 
+  <script>var baseUrl = "/owner/package/~/"</script> 
   <script defer src="/owner/package/~/js/chunk-vendors.bdb7cbba.js"></script> 
   <script defer src="/owner/package/~/js/index.2871ffbd.js"></script> 
   <link href="/owner/package/~/css/index.ff036a9e.css" rel="stylesheet" /> 
