--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b.html
@@ -8,9 +8,7 @@
   <link rel="icon" href="/owner/package/1.2.3/favicon.ico" /> 
   <link rel="mask-icon" href="/owner/package/1.2.3/favicon.svg" color="#333333" /> 
   <title>pkg Documentation – Swift Package Index</title> 
-  <script>
-        var baseUrl = "/"
-    </script> 
+  <script>var baseUrl = "/owner/package/1.2.3/"</script> 
   <script defer src="/owner/package/1.2.3/js/chunk-vendors.bdb7cbba.js"></script> 
   <script defer src="/owner/package/1.2.3/js/index.2871ffbd.js"></script> 
   <link href="/owner/package/1.2.3/css/index.ff036a9e.css" rel="stylesheet" /> 
