Drop tutorial special handling - it doesn't have an archive, cleanup

--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_tutorials.index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_tutorials.index.html
@@ -26,14 +26,7 @@
       <li><a href="/"><span>Swift Package Index</span></a></li>
       <li><a href="/owner"><span>owner</span></a></li>
       <li><a href="/owner/package"><span>pkg</span></a></li>
-      <li>
-       <div class="choices">
-        <span>Documentation for <span class="stable">1.0.0</span></span>
-        <ul>
-         <li><a href="/owner/package/main/documentation/docs"><span class="branch">main</span></a></li>
-         <li class="current"><a href="/owner/package/1.0.0/documentation/docs"><span class="stable">1.0.0</span></a></li>
-        </ul>
-       </div></li>
+      <li><span>Documentation for <span class="stable">1.0.0</span></span></li>
      </ul>
     </nav>
    </div>
