--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_current.index-mixed-case.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_current.index-mixed-case.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" /> 
   <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" /> 
-  <link rel="icon" href="/owner/package/~/favicon.ico" /> 
-  <link rel="mask-icon" href="/owner/package/~/favicon.svg" color="#333333" /> 
+  <link rel="icon" href="/owner/package/1.0.0/favicon.ico" /> 
+  <link rel="mask-icon" href="/owner/package/1.0.0/favicon.svg" color="#333333" /> 
   <title>pkg Documentation – Swift Package Index</title> 
   <script>var baseUrl = "/owner/package/~/"</script> 
-  <script defer src="/owner/package/~/js/chunk-vendors.bdb7cbba.js"></script> 
-  <script defer src="/owner/package/~/js/index.2871ffbd.js"></script> 
-  <link href="/owner/package/~/css/index.ff036a9e.css" rel="stylesheet" /> 
+  <script defer src="/owner/package/1.0.0/js/chunk-vendors.bdb7cbba.js"></script> 
+  <script defer src="/owner/package/1.0.0/js/index.2871ffbd.js"></script> 
+  <link href="/owner/package/1.0.0/css/index.ff036a9e.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="/docc.css?test" />
  </head> 
  <body data-color-scheme="auto">
