--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
@@ -26,7 +26,6 @@
     <link rel="stylesheet" href="/main.css?test" data-turbolinks-track="reload"/>
     <script src="/main.js?test" data-turbolinks-track="reload" defer></script><script async defer data-domain="swiftpackageindex.com" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
-    <script src="https://cdn.jsdelivr.net/npm/vega@5" data-turbolinks-track="reload"></script>
   </head>
   <body>
     <header>
@@ -84,14 +83,9 @@
         <p>To measure compatibility with Swift 6 across packages in the index, we are tracking compatibility across a set of packages under active development where they have at least one git commit in the past 12 months. The charts below visualise the results of our testing.</p>
         <h3>Total packages compatible with Swift 6</h3>
         <p>This chart shows the total number of packages that will compile with  Swift 6:</p>
-        <p>Failed to load 
-          <code>readyforswift6-compatiblepackages</code>.
-        </p>
+        <p>Couldn’t load chart data.</p>
         <h3>Total Swift 6 concurrency errors</h3>
         <p>This chart shows the total number of Swift concurrency errors across the entire selection of testing packages:</p>
-        <p>Failed to load 
-          <code>readyforswift6-totalerrors</code>.
-        </p>
         <h3>List of compatible packages</h3>
         <p>Here are all the compatible packages!</p>
       </div>
