Revert "Merge pull request #2992 from SwiftPackageIndex/add-DocRoute-squashed"
This reverts commit 995f6297696545913faf991a2efb80d38feda457, reversing
changes made to 09e864e197f3ac8988fec2fc285c09cc551c90a2.

--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.current-index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.current-index.html
@@ -28,9 +28,9 @@
       <li><a href="/owner/package"><span>pkg</span></a></li>
       <li>
        <div class="choices">
-        <span>Documentation for <span class="branch">feature/1.2.3</span></span>
+        <span>Documentation for <span class="branch">feature-1.2.3</span></span>
         <ul>
-         <li class="current"><a href="/owner/package/feature-1.2.3/documentation/target"><span class="branch">feature/1.2.3</span></a></li>
+         <li><a href="/owner/package/feature-1.2.3/documentation/target"><span class="branch">feature/1.2.3</span></a></li>
         </ul>
        </div></li>
      </ul>
