--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MaintainerInfoIndex.1.html
@@ -120,29 +120,29 @@
           <ul>
             <li>
               <p>
-                <a href="/SwiftPackageIndex/SPIManifest/~/documentation/spimanifest/commonusecases#spiHosting">Hosting your documentation</a> on the Swift Package Index site.
+                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#spiHosting">Hosting your documentation</a> on the Swift Package Index site.
               </p>
             </li>
             <li>
               <p>
-                <a href="/SwiftPackageIndex/SPIManifest/~/documentation/spimanifest/commonusecases#selfHosting">Configure a link to external self-hosted documentation</a>.
+                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#selfHosting">Configure a link to external self-hosted documentation</a>.
               </p>
             </li>
             <li>
               <p>
-                <a href="/SwiftPackageIndex/SPIManifest/~/documentation/spimanifest/commonusecases#targetsAndSchemes">Control build targets and schemes</a> to improve your 
+                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#targetsAndSchemes">Control build targets and schemes</a> to improve your 
                 <a href="/example/package/builds">package's build results</a>. For more details about the build system, see the 
                 <a href="/docs/builds">build system documentation</a>.
               </p>
             </li>
             <li>
               <p>If your builds require additional operating system-level dependencies to succeed, you can 
-                <a href="/SwiftPackageIndex/SPIManifest/~/documentation/spimanifest/commonusecases#linuxImages">configure base images for Linux builds</a>.
+                <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest/commonusecases#linuxImages">configure base images for Linux builds</a>.
               </p>
             </li>
           </ul>
           <p>See the 
-            <a href="/SwiftPackageIndex/SPIManifest/~/documentation/spimanifest">SPIManifest package documentation</a> for more details, or use our 
+            <a href="/SwiftPackageIndex/SPIManifest/documentation/spimanifest">SPIManifest package documentation</a> for more details, or use our 
             <a href="/validate-spi-manifest">online manifest validation helper</a> to validate your 
             <code>.spi.yml</code>file.
           </p>
