--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
@@ -78,16 +78,16 @@
     <main>
       <div class="inner">
         <h2>Ready for Swift 6</h2>
-        <p>Swift 6 is lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut ante vel diam sagittis hendrerit id eget nunc. Proin non ex eget dolor tristique lacinia placerat et turpis. In dui dui, malesuada eu lectus nec, rhoncus feugiat nisi.</p>
-        <p>Get started by [reading the migration guide]or this [guide to Swift 6 on Swift.org].</p>
-        <p>To measure compatibility with Swift 6 across packages in the index, we are tracking compatibility across a set of packages under active development where they have at least one git commit in the past 12 months. The charts below visualise the results of our testing.</p>
+        <p>Swift 6 brings with it the ability to check your code for concurrency and data race issues. If switched on, the Swift compiler will produce errors where you could have data races.</p>
+        <p>For help migrating your code, see the 
+          <a href="https://example.com">Swift 6 language mode migration guide</a> or the 
+          <a href="https://example.com">Swift 6 release blog post</a>
+        </p>
+        <p>To track the progress of the Swift package ecosystem, the Swift Package Index is running regular package compatibility checks across all packages in the index.</p>
         <h3>Total packages compatible with Swift 6</h3>
-        <p>This chart shows the total number of packages that will compile with  Swift 6:</p>
         <p>Couldn’t load chart data.</p>
         <h3>Total Swift 6 concurrency errors</h3>
-        <p>This chart shows the total number of Swift concurrency errors across the entire selection of testing packages:</p>
-        <h3>List of compatible packages</h3>
-        <p>Here are all the compatible packages!</p>
+        <p>Couldn’t load chart data.</p>
       </div>
     </main>
     <footer>
