--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
@@ -100,7 +100,7 @@
           <strong>Q: </strong>What does “total concurrency errors” mean?
         </p>
         <p>
-          <strong>A: </strong>Sven: Can you replace this with a short description of these errors, please?
+          <strong>A: </strong>Swift 6 introduces complete concurrency checking, a compiler feature that checks your code for data-race safety. The number of concurrency errors reflects how many issues the compiler detected relating to these concurrency or data-race checks. The total errors chart plots the total number of these errors summed across all packages.
         </p>
         <hr class="minor"/>
         <p>
