--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView_development.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView_development.1.html
@@ -56,8 +56,8 @@
         </nav>
       </div>
     </header>
-    <p class="announcement">How many packages are compatible with Swift 6? Find out which packages are 
-      <a href="/ready-for-swift-6">Ready for Swift 6</a>!
+    <p class="announcement">Track the adoption of Swift 6 strict concurrency checks for data race safety. How many packages are 
+      <a href="/ready-for-swift-6">Ready for Swift 6</a>?
     </p>
     <section class="search home">
       <div class="inner">
