--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_open_source_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_open_source_license.1.html
@@ -166,6 +166,7 @@
                 <li class="executables">1 executable</li>
                 <li class="plugins">No plugins</li>
                 <li class="macros">2 macros</li>
+                <li class="data-race-safe">Safe from data races</li>
               </ul>
             </section>
             <hr class="minor"/>
