--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
@@ -164,6 +164,7 @@
                 <li class="executables">1 executable</li>
                 <li class="plugins">No plugins</li>
                 <li class="macros">2 macros</li>
+                <li class="data-race-safe">Safe from data races</li>
                 <li class="keywords">
                   <div data-controller="overflowing-list" data-overflowing-list-overflow-message-value="Show all 5 tags…" data-overflowing-list-overflow-height-value="52" data-overflowing-list-collapsed-value="true" data-action="turbo:load@document->overflowing-list#addShowMoreLinkIfNeeded">
                     <ul data-overflowing-list-target="list" class="keywords">
