--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_withPackageFundingLinks.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_withPackageFundingLinks.1.html
@@ -164,6 +164,7 @@
                 <li class="executables">1 executable</li>
                 <li class="plugins">No plugins</li>
                 <li class="macros">2 macros</li>
+                <li class="data-race-safe">Safe from data races</li>
               </ul>
             </section>
             <section class="package-funding">
