Snapshots back to normal for production mode.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -69,14 +69,10 @@
       <div class="inner">
         <section class="two-column">
           <section>
-            <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Ready for Swift 6 CTA" class="panel-button rfs6">
-              <a data-action="click->panel-button#click" href="/ready-for-swift-6">
-                <div class="body">
-                  <p>
-                    <strong>Are the packages you use safe from data races?</strong> We’re tracking progress towards data race safety this summer. Find out which packages are “Ready for Swift 6” and check for packages marked as “Safe from data races” when browsing the index.
-                  </p>
-                </div>
-                <div class="cta">Track Progress &rarr;</div>
+            <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Podcast CTA" class="panel-button podcast">
+              <a data-action="click->panel-button#click" href="https://swiftpackageindexing.transistor.fm">
+                <div class="body">Join Dave and Sven for a chat about ongoing Swift Package Index development and package recommendations from the community on the Swift Package Indexing podcast.</div>
+                <div class="cta">Listen Now &rarr;</div>
               </a>
             </div>
             <section class="recent">
