--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView_development.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView_development.1.html
@@ -73,7 +73,7 @@
     </section>
     <main>
       <div class="inner">
-        <section class="two-column">
+        <section class="center-column">
           <section>
             <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Ready for Swift 6 CTA" class="panel-button rfs6">
               <a data-action="click->panel-button#click" href="/ready-for-swift-6">
@@ -85,123 +85,77 @@
                 <div class="cta">Track Progress &rarr;</div>
               </a>
             </div>
-            <section class="recent">
-              <div class="recent_packages">
-                <h3>Recently Added</h3>
-                <ul>
-                  <li>
-                    <a href="https://example.com/package">Package</a>
-                    <small>Added 2 hours ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package</a>
-                    <small>Added 2 hours ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package</a>
-                    <small>Added 2 hours ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package</a>
-                    <small>Added 2 hours ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package</a>
-                    <small>Added 2 hours ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package</a>
-                    <small>Added 2 hours ago</small>
-                  </li>
-                </ul>
-              </div>
-              <div class="recent_releases">
-                <h3>Recent Releases</h3>
-                <ul>
-                  <li>
-                    <a href="https://example.com/package">Package 
-                      <small>1.0.0</small>
-                    </a>
-                    <small>Released 20 minutes ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package 
-                      <small>1.0.0</small>
-                    </a>
-                    <small>Released 20 minutes ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package 
-                      <small>1.0.0</small>
-                    </a>
-                    <small>Released 20 minutes ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package 
-                      <small>1.0.0</small>
-                    </a>
-                    <small>Released 20 minutes ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package 
-                      <small>1.0.0</small>
-                    </a>
-                    <small>Released 20 minutes ago</small>
-                  </li>
-                  <li>
-                    <a href="https://example.com/package">Package 
-                      <small>1.0.0</small>
-                    </a>
-                    <small>Released 20 minutes ago</small>
-                  </li>
-                </ul>
-              </div>
-            </section>
           </section>
-          <section class="supporter-ctas">
-            <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Supporters CTA" class="panel-button scta">
-              <a data-action="click->panel-button#click" href="/supporters">
-                <div class="body">Join the companies and individuals who support this site and keep it running.
-                  <div class="avatars">
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                    <img src="/images/logo.svg" title="Community Sponsor" alt="Profile picture for Community Sponsor" width="20" height="20"/>
-                  </div>
-                </div>
-              </a>
+          <section class="recent">
+            <div class="recent_packages">
+              <h3>Recently Added</h3>
+              <ul>
+                <li>
+                  <a href="https://example.com/package">Package</a>
+                  <small>Added 2 hours ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package</a>
+                  <small>Added 2 hours ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package</a>
+                  <small>Added 2 hours ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package</a>
+                  <small>Added 2 hours ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package</a>
+                  <small>Added 2 hours ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package</a>
+                  <small>Added 2 hours ago</small>
+                </li>
+              </ul>
             </div>
-            <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Sponsor CTA (Sample Sponsor)" class="panel-button ccta">
-              <a data-action="click->panel-button#click" href="https://example.com/sponsored/link">
-                <div class="body">
-                  <picture>
-                    <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
-                    <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
-                  </picture>Sponsored links tell everyone about a thing that you can use to do another thing to do!
-                </div>
-                <div class="cta">Visit Sample Sponsor &rarr;</div>
-              </a>
-            </div>
-            <div data-controller="panel-button" data-panel-button-analytics-event-value="Home - Sponsor CTA (Sample Sponsor)" class="panel-button ccta">
-              <a data-action="click->panel-button#click" href="https://example.com/sponsored/link">
-                <div class="body">
-                  <picture>
-                    <source srcset="/images/logo.svg" media="(prefers-color-scheme: dark)"/>
-                    <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
-                  </picture>Sponsored links tell everyone about a thing that you can use to do another thing to do!
-                </div>
-                <div class="cta">Visit Sample Sponsor &rarr;</div>
-              </a>
+            <div class="recent_releases">
+              <h3>Recent Releases</h3>
+              <ul>
+                <li>
+                  <a href="https://example.com/package">Package 
+                    <small>1.0.0</small>
+                  </a>
+                  <small>Released 20 minutes ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package 
+                    <small>1.0.0</small>
+                  </a>
+                  <small>Released 20 minutes ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package 
+                    <small>1.0.0</small>
+                  </a>
+                  <small>Released 20 minutes ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package 
+                    <small>1.0.0</small>
+                  </a>
+                  <small>Released 20 minutes ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package 
+                    <small>1.0.0</small>
+                  </a>
+                  <small>Released 20 minutes ago</small>
+                </li>
+                <li>
+                  <a href="https://example.com/package">Package 
+                    <small>1.0.0</small>
+                  </a>
+                  <small>Released 20 minutes ago</small>
+                </li>
+              </ul>
             </div>
           </section>
         </section>
